--- a/Landingpage/landingpage.html
+++ b/Landingpage/landingpage.html
@@ -24,8 +24,8 @@
           <b>Find Your Dream Job Easy &<br />Fast With Nijobs</b>
         </p>
         <span class="two"
-          >Search and find your dream job is now easier than<br />ever you just
-          browse and find job if you need it.
+          >Searching and finding your dream job is now easier than. You just
+          browse and find a job you need.
         </span>
         <div class="three">
           <span class="link2">Job Title or keyword</span>
